static/scss/answers/interactive-map/InteractiveMap.scss
.InteractiveMap
{
  $results-width-desktop: var(--yxt-maps-desktop-results-container-width);

  $input-height: 44px !default;
  $detail-card-height: 30% !default;

  $desktop-break-point-min: md !default;
  $mobile-break-point-max: sm !default;

  $border-default: 1px solid #666 !default;

  position: relative;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  width: 100%;
  height: 100vh;

  .Answers 
  {
    &-content
    {
      display: flex;
      flex-grow: 1;
      flex-direction: column;
      width: 100%;
      height: 100%;
      position: relative;
      background-color: white;

      @include bpgte($desktop-break-point-min)
      {
        position: relative;
        bottom: 0;
        height: auto;
        width: 100%;
      }

      @include bplte($mobile-break-point-max)
      {
        flex-direction: column-reverse;
        min-height: 100vh;
      }
    }

    &-contentWrap
    {
      background-color: transparent;
      max-height: 100%;
      width: 100%;
      position: absolute;
      z-index: 2;
      display: flex;
      flex-direction: column;

      @include bpgte($desktop-break-point-min)
      {
        width: $results-width-desktop;
        max-height: calc(100% - 48px);
        margin-top: 16px;
        margin-left: 16px;
        margin-right: 16px;
        margin-bottom: 32px;
        border-radius: 4px;
        box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
        background-color: #fafafa;
      }

      @include bplte($mobile-break-point-max)
      {
        pointer-events: none;
        position: static;
        height: 100%;
        min-height: 100vh;
      }
    }

    &-resultsWrapper
    {
      display: none;
      flex-direction: column;
      flex-grow: 1;
      background-color: white;
      padding: 0;

      @include bpgte($desktop-break-point-min) {
        display: flex;
        border-radius: 4px;
        overflow-y: auto;
      }

      @include bplte($mobile-break-point-max)
      {
        transition: top 0.3s ease-out;
        position: relative;
        top: 100%;
        pointer-events: all;
        height: auto;

        &--moving
        {
          transition: none;
        }
      }
    }

    &-resultsContainer,
    &-results
    {
      display: flex;
      flex-direction: column;
      flex-grow: 1;
      flex-shrink: 0;
    }

    &-searchWrapper
    {
      padding: 16px;
      display: flex;
      flex-shrink: 0;
      width: 100%;
      background-color: transparent;

      @include bpgte($desktop-break-point-min) {
        position: static;
      }

      @include bplte($mobile-break-point-max)
      {
        pointer-events: all;
        padding: 16px;
      }
    }

    &-form
    {
      display: flex;
      flex-direction: column;
      flex-grow: 1;
      position: relative;
    }

    &-mapWrapper {
      display: block;
      position: absolute;
      width: 100%;
      height: 100%;
      right: 0;
      top: 0;
    }

    &-map
    {
      display: block;
      width: 100%;
      height: 100%;

      @include bplte($mobile-break-point-max)
      {
        top: var(--yxt-maps-mobile-results-header-height);
        transition: height 0.3s ease-out;
        height: calc(100% - var(--yxt-maps-mobile-results-header-height) - var(--yxt-maps-mobile-results-footer-height));
      }
    }

    &-mobileToggles
    {
      display: none;
      position: fixed;
      bottom: 72px;
      right: 16px;
      z-index: 2;
      background-color: #eaeaea;
      color: black;
      cursor: pointer;
      box-shadow: 1px 1px 2px rgba(0,0,0,0.25);
      border-radius: var(--yxt-searchbar-form-border-radius);
    }

    &-mobileToggle
    {
      flex: 1;
      padding: 16px;
    }

    &-viewMapText,
    &-viewListText {
      text-transform: uppercase;
      letter-spacing: 1px;
      align-items: center;

      svg {
        margin-right: 8px;
        height: 20px;
        width: 20px;
      }
    }

    &-viewListText {
      display: flex;
    }

    &-viewMapText
    {
      display: none;
    }

    &-centerTop {
      position: absolute;
      color: black;
      top: calc(72px + 40px);
      left: 50%;
      z-index: 1;

      @include bpgte($desktop-break-point-min) {
        top: 16px;
        left: calc(50% + calc(var(--yxt-maps-desktop-results-container-width) / 2));
      }
    }

    &-searchThisAreaWrapper {
      display: none;
      position: relative;
      left: -50%;
      background-color: var(--yxt-maps-search-this-area-background-color);
      color: var(--yxt-maps-search-this-area-text-color);
      padding: 10px 16px;
      border-radius: var(--yxt-border-radius);
      box-shadow: 1px 1px 2px rgba(0,0,0,0.25);
    }

    &-searchThisAreaToggleWrapper {
      padding: 8px 16px;
      font-size: 14px;
      display: flex;
      align-items: center;
      border-top: var(--yxt-border-default);
      color: var(--yxt-locationBias-text-color);

      &--desktop {
        display: none;

        @include bpgte(md) {
          display: flex;
        }
      }
    }

    &-searchThisAreaToggle {
      opacity: 0;
      height: 0;
      width: 0;
      margin: 0;
    }

    &-searchThisAreaToggle:checked + .Answers-searchThisAreaToggleLabel:after {
      content: "";
    }

    &-searchThisAreaToggleLabel {
      position: relative;
      cursor: pointer;
      margin-left: 22px;
      font-size: var(--yxt-font-size-md);

      &:before {
        content: "";
        position: absolute;
        bottom: 50%;
        left: -22px;
        height: 16px;
        width: 16px;
        transform: translateY(50%);
        border: 1px solid var(--yxt-color-borders);
        border-radius: 2px;
      }

      &:after {
        content: none;
        position: absolute;
        top: calc(50% - 3px);
        left: -20px;
        width: 4px;
        height: 12px;
        transform: rotate(45deg) translateY(-50%);
        border-left-color: var(--yxt-filter-options-checkmark-color);
        border-bottom: .0625rem solid #0c5ecb;
        border-bottom-color: var(--yxt-filter-options-checkmark-color);
        border-right: .0625rem solid #0c5ecb;
        border-right-color: var(--yxt-filter-options-checkmark-color);
        border-top-color: var(--yxt-filter-options-checkmark-color);
      }
    }

    &-resultsHeaderTop {
      display: flex;
      justify-content: space-between;
      padding-left: 16px;
    }

    &-stickyBottom {
      bottom: 0;
      background-color: #fafafa;
      position: sticky;
    }

    &-mapFooter {
      background-color: #fafafa;
      display: none;
      position: absolute;
      bottom: 0;
      flex-direction: column;
      width: 100%;
    }

    &-search {
      @include bplte($mobile-break-point-max) {
        padding-left: 0;
        padding-right: 0;
      }
    }

    &-pagination .yxt-Pagination {
      padding: 8px;
    }

    &-filtersWrapper {
      overflow: auto;

      @include bplte($mobile-break-point-max) {
        height: 100%;
        pointer-events: all;
        background-color: white;
      }
    }

    &-locationBias {
      &--mobileMap {
        display: none;
      }

      .yxt-LocationBias {
        border-top: var(--yxt-border-default);
        padding-left: 16px;
        padding-right: 16px;

        @include bplte($mobile-break-point-max) {
          height: 60px;
          display: flex;
          justify-content: center;
          align-items: center;
        }

        &-container {
          text-align: left;
        }
      }
    }

    &-resultsHeader {
      display: flex;
      flex-direction: column;
      padding-left: 0;

      @include bplte($mobile-break-point-max) {
        position: sticky;
        top: 0;
        z-index: 2;
        pointer-events: all;
      }
    }
  }

  // TODO make this the default
  &.InteractiveMap--listShown
  {
    @include bplte($mobile-break-point-max) {
      height: 100%;
    }

    .Answers
    {
      &-resultsWrapper
      {
        @include bplte($mobile-break-point-max)
        {
          top: 0;
          display: flex;
        }
      }

      &-viewMapText
      {
        display: flex;
      }

      &-viewListText
      {
        display: none;
      }
    }
  }

  &.InteractiveMap--mapShown
  {
    .Answers-mapFooter {
      display: flex;
    }

    .Answers-locationBias {
      &--main {
        display: none;
      }

      &--mobileMap {
        display: inline-block;
      }
    }
  }

  &.InteractiveMap--detailShown
  {
    .Answers
    {
      &-map
      {
        @include bplte($mobile-break-point-max)
        {
          position: absolute;
          top: var(--yxt-maps-mobile-results-header-height);
          height: calc(100% - var(--yxt-maps-mobile-results-header-height) - var(--yxt-maps-mobile-detail-card-height);
        }
      }

      &-searchThisWrapper {
        display: none;
      }

      &-mobileToggles {
        z-index: 0;
      }
    }
  }

  &.InteractiveMap--showMobileViewToggles {
    .Answers-mobileToggles {
      @include bplte($mobile-break-point-max) {
        display: flex;
      }
    }
  }

  // TODO move to js
  &.InteractiveMap--showCollapsibleFilters {
    .Answers-mobileToggles {
      display: none;
    }

    .Answers-stickyBottom {
      display: none;
    }
  }

  // TODO move to js
  &.InteractiveMap--noResults {
    .Answers-searchThisAreaWrapper {
      display: none;
    }

    .Answers-searchThisAreaToggleWrapper {
      display: none;
    }
  }

  // TODO move to js
  &.InteractiveMap--showSearchThisArea:not(.InteractiveMap--noResults) {
    .Answers-searchThisAreaWrapper {
      display: flex;
    }
  }

  .gmnoprint
  {
    @include bplte($mobile-break-point-max)
    {
      display: none;
    }
  }

  .HitchhikerLocationStandard {
    position: relative;

    &-content {
      flex-wrap: wrap;
      line-height: var(--yxt-line-height-sm);
    }

    &-ctasWrapper {
      margin-left: 0;
    }

    &-exitImageWrapper {
      height: 16px;
      width: 16px;
      margin-bottom: 8px;
    }

    &-ordinal {
      display: none;
    }

    &-exitWrapper {
      position: absolute;
      right: 16px;
      top: 16px;
    }

    &-exit {
      display: none;
      width: 100%;
      font-size: 16px;
      font-weight: bold;
      justify-content: flex-end;
    }
  }

  .yxt-Card--copy {
    transition: height 0.3s ease-out;
  }

  .yxt-Card--pinClicked {
    @include bpgte($desktop-break-point-min) {
      .HitchhikerLocationStandard {
        background-color: #ececec;
      }
    }

    @include bplte($mobile-break-point-max) {
      position: absolute;
      bottom: 0;
      left: 0;
      width: 100%;
      height: var(--yxt-maps-mobile-detail-card-height);
      background-color: #fcfcfc;

      .HitchhikerLocationStandard-exit {
        display: flex;
      }

      .HitchhikerLocationStandard-contentWrapper {
        overflow-y: scroll;
      }
    }
  }
  
  &.CollapsibleFilters .Answers-resultsHeader {
    background-color: #fafafa !important;
  }

  &.CollapsibleFilters .Answers-viewResultsButton {
    padding: 8px;
    
    @include bpgte($desktop-break-point-min) {
      width: 100% !important;
      position: absolute;
    }
  }

  &.CollapsibleFilters .Answers-filtersWrapper {
    @include bplte($mobile-break-point-max) {
      margin: 0 !important;
      padding: 16px;
    }
  }
}

.YxtPage-wrapper--detailShown {
  .Answers-footer {
    display: none;
  }
}

